# virtkit

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  audit.sh  build-kernel.sh  build.sh  fmt.sh  lint.sh  rust-toolchain.toml  update-kernel.sh  update.sh
.agents/: coding-guidelines.md  commit-message-guidelines.md
.agents/coding-guidelines/: rust.md  shell.md
.cargo/: audit.toml  config.toml
.devcontainer/: Dockerfile  apk-pins.txt  devcontainer.json
.github/workflows/: build.yml  ci.yml  quality.yml  release.yml
kernel/: Dockerfile  apk-pins.txt  kernel-fragment.config  kernel-removals.config
virtkit/: Cargo.toml  README.md  config.example.toml
virtkit-agent/: Cargo.toml
virtkit-agent/src/: fleetctl.rs  forward.rs  fsfreeze.rs  init.rs  lib.rs  messages.rs  net.rs  pty.rs  sftp.rs  ssh.rs  status.rs
virtkit-agent/src/exec/: client.rs  mod.rs  server.rs
virtkit-agent/tests/: exec.rs
virtkit/src/: build.rs  buildconf.rs  buildkit.rs  config.rs  convert.rs  cpio.rs  dockerhash.rs  ensure.rs  executor.rs  ext4.rs  fleet.rs  image.rs  initramfs.rs  jobctx.rs  launch.rs  libkrun_sys.rs  local.rs  main.rs  mkoci.rs  net.rs  oci.rs  qcow2.rs  registry.rs  regserve.rs  run.rs  services.rs  source.rs  sshconf.rs  switch.rs  virtiofsd.rs  vm.rs  vmm.rs
vk-agent/: Cargo.toml
vk-agent/src/: diskmount.rs  framing.rs  fsfreeze.rs  init.rs  lib.rs  netcfg.rs  ssh.rs  status.rs  tap.rs
vk-agent/src/exec/: server.rs
vk-agent/tests/: exec.rs
vk-core/: Cargo.toml
vk-core/src/: addr.rs  dockerignore.rs  fleetctl.rs  lib.rs
vk-core/src/exec/: server.rs
vk-core/tests/: exec.rs
vk-driver/: Cargo.toml  README.md  build.rs  config.example.toml
vk-driver/src/: build.rs  config.rs  convert.rs  cpio.rs  dockerhash.rs  embed.rs  ensure.rs  executor.rs  ext4.rs  fleet.rs  image.rs  initramfs.rs  jobctx.rs  libkrun_sys.rs  local.rs  main.rs  mkoci.rs  oci.rs  qcow2.rs  registry.rs  regserve.rs  run.rs  services.rs  source.rs  sshagent.rs  sshconf.rs  switch.rs  virtiofsd.rs  vm.rs  vmm.rs
