[package]
name = "virtkit"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
virtkit-agent = { path = "../virtkit-agent" }
futures.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
oci-client.workspace = true
flate2.workspace = true
sha2.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
toml.workspace = true
etherparse.workspace = true
ipstack.workspace = true

# Bundled vhost-user virtio-fs daemon (the `virtkit virtiofsd` subcommand) — a default
# feature, disable with --no-default-features. Versions are pinned to match what
# virtiofsd 1.13 depends on so the vhost / vm-memory types unify into one instance.
# Default features keep `seccomp` on (the daemon enables a seccomp filter, like
# upstream), so the build links musl-static libseccomp + libcap-ng — see
# .devcontainer/Dockerfile.
virtiofsd = { version = "1.13", optional = true }
vhost = { version = "0.13", optional = true }
vhost-user-backend = { version = "0.17", optional = true }
vm-memory = { version = "0.16", features = ["backend-mmap", "backend-atomic"], optional = true }

[features]
default = ["virtiofsd"]
# compile the bundled virtio-fs daemon into virtkit
virtiofsd = ["dep:virtiofsd", "dep:vhost", "dep:vhost-user-backend", "dep:vm-memory"]
