[package]
name = "virtkit"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
virtkit-agent = { path = "../virtkit-agent" }
futures.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
oci-client.workspace = true
flate2.workspace = true
sha2.workspace = true
fastcdc.workspace = true
zstd.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
toml.workspace = true
etherparse.workspace = true
ipstack.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
reqwest.workspace = true

# Bundled vhost-user virtio-fs daemon (the `virtkit virtiofsd` subcommand) — a default
# feature, disable with --no-default-features. Versions are pinned to match what
# virtiofsd 1.13 depends on so the vhost / vm-memory types unify into one instance.
# Default features keep `seccomp` on (the daemon enables a seccomp filter, like
# upstream), so the build links musl-static libseccomp + libcap-ng — see
# .devcontainer/Dockerfile.
virtiofsd = { version = "1.13", optional = true }
vhost = { version = "0.13", optional = true }
vhost-user-backend = { version = "0.17", optional = true }
vm-memory = { version = "0.16", features = ["backend-mmap", "backend-atomic"], optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
jemallocator.workspace = true

# libkrun VMM backend (the `libkrun` feature), an rlib crate dep so it shares
# virtkit's std — no double-std / broken-unwinding that a static libkrun.a link
# hits. Vendored under third_party/libkrun (rev 9a8fedc, stable-1.19.x with PR #728)
# and locally patched so the passthrough fs device no longer needs libc's musl statx
# bindings (dropped after 0.2.183) — letting the whole tree build on a modern libc.
# See third_party/libkrun/VENDOR.md. default-features off drops the init-blob (we use
# disable_implicit_init); blk (krun_add_disk2) + net.
[dependencies.krun]
path = "../third_party/libkrun/src/libkrun"
package = "libkrun"
default-features = false
features = ["blk", "net"]
optional = true

[features]
default = ["virtiofsd", "libkrun"]
# compile the bundled virtio-fs daemon into virtkit
virtiofsd = ["dep:virtiofsd", "dep:vhost", "dep:vhost-user-backend", "dep:vm-memory"]
# the libkrun VMM backend, driven by the `__libkrun-boot` subcommand. libkrun is
# reached via its C ABI; we always pass our own kernel (krun_set_kernel) so it
# never loads libkrunfw. Its rust-vmm deps (vm-memory 0.17, …) coexist with the
# bundled virtiofsd's (0.16) — independent subsystems, so no version unification.
# On by default: libkrun is the default backend when it can run the job (see
# vmm::libkrun_selected); cloud-hypervisor stays the fallback.
libkrun = ["dep:krun"]
