[package]
name = "vk-driver"
version.workspace = true
edition.workspace = true

# The crate is vk-driver, but the shipped host binary is `vk`.
[[bin]]
name = "vk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
vk-agent = { path = "../vk-agent" }
futures.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
oci-client.workspace = true
flate2.workspace = true
sha2.workspace = true
fastcdc.workspace = true
zstd.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
toml.workspace = true
etherparse.workspace = true
ipstack.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
reqwest.workspace = true

# Bundled vhost-user virtio-fs daemon (the `vk virtiofsd` subcommand) — a default
# feature, disable with --no-default-features. Versions are pinned to match what
# virtiofsd 1.13 depends on so the vhost / vm-memory types unify into one instance.
# Default features keep `seccomp` on (the daemon enables a seccomp filter, like
# upstream), so the build links musl-static libseccomp + libcap-ng — see
# .devcontainer/Dockerfile.
virtiofsd = { version = "1.13", optional = true }
vhost = { version = "0.13", optional = true }
vhost-user-backend = { version = "0.17", optional = true }
vm-memory = { version = "0.16", features = ["backend-mmap", "backend-atomic"], optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
jemallocator.workspace = true

[features]
default = ["virtiofsd"]
# compile the bundled virtio-fs daemon into virtkit
virtiofsd = ["dep:virtiofsd", "dep:vhost", "dep:vhost-user-backend", "dep:vm-memory"]
