[package]
name = "vk-driver"
version.workspace = true
edition.workspace = true

# The single shipped binary is `vk` — vk-driver with the guest kernel and vk-agent
# embedded (see build.rs + src/embed.rs, the default `embed` feature).
[[bin]]
name = "vk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
vk-core = { path = "../vk-core" }
futures.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
oci-client.workspace = true
flate2.workspace = true
sha2.workspace = true
fastcdc.workspace = true
zstd.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
toml.workspace = true
etherparse.workspace = true
ipstack.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
reqwest.workspace = true
rustls.workspace = true
# feature-unification only (forces oci-client's jsonwebtoken onto rust_crypto, not
# aws-lc-rs); not referenced in code.
jsonwebtoken.workspace = true

# Bundled vhost-user virtio-fs daemon (the `vk virtiofsd` subcommand) — a default
# feature, disable with --no-default-features. Versions are pinned to match what
# virtiofsd 1.13 depends on so the vhost / vm-memory types unify into one instance.
# Default features keep `seccomp` on (the daemon enables a seccomp filter, like
# upstream), so the build links musl-static libseccomp + libcap-ng — see
# .devcontainer/Dockerfile.
virtiofsd = { version = "1.13", optional = true }
vhost = { version = "0.13", optional = true }
vhost-user-backend = { version = "0.17", optional = true }
vm-memory = { version = "0.16", features = ["backend-mmap", "backend-atomic"], optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
jemallocator.workspace = true

[features]
default = ["virtiofsd", "embed"]
# Embed the guest kernel (vmlinux) and vk-agent into the `vk` binary so it runs
# self-contained (no --kernel/--agent, no files under /usr/local/lib/vk). build.rs
# reads VK_EMBED_KERNEL / VK_EMBED_AGENT at compile time; when unset (a plain dev
# `cargo build`) it embeds nothing and the runtime falls back to those flags. See
# src/embed.rs. build.sh sets the two vars for a real, shippable self-contained `vk`.
embed = []
# compile the bundled virtio-fs daemon into vk
virtiofsd = ["dep:virtiofsd", "dep:vhost", "dep:vhost-user-backend", "dep:vm-memory"]
