[package]
name = "vk-driver"
version.workspace = true
edition.workspace = true

# The single shipped binary is `vk` — vk-driver with the guest kernel and vk-agent
# embedded (see build.rs + src/embed.rs, the default `embed` feature).
[[bin]]
name = "vk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
vk-core = { path = "../vk-core" }
futures.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
oci-client.workspace = true
flate2.workspace = true
sha2.workspace = true
fastcdc.workspace = true
zstd.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
toml.workspace = true
etherparse.workspace = true
ipstack.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
reqwest.workspace = true
rustls.workspace = true
# feature-unification only (forces oci-client's jsonwebtoken onto rust_crypto, not
# aws-lc-rs); not referenced in code.
jsonwebtoken.workspace = true

# Bundled vhost-user virtio-fs daemon (the `vk virtiofsd` subcommand) — a default
# feature, disable with --no-default-features. Versions are pinned to match what
# virtiofsd 1.13 depends on so the vhost / vm-memory types unify into one instance.
# Default features keep `seccomp` on (the daemon enables a seccomp filter, like
# upstream), so the build links musl-static libseccomp + libcap-ng — see
# .devcontainer/Dockerfile.
virtiofsd = { version = "1.13", optional = true }
vhost = { version = "0.13", optional = true }
vhost-user-backend = { version = "0.17", optional = true }
vm-memory = { version = "0.16", features = ["backend-mmap", "backend-atomic"], optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
jemallocator.workspace = true

# libkrun VMM backend (the `libkrun` feature), an rlib crate dep so it shares
# vk's std — no double-std / broken-unwinding that a static libkrun.a link
# hits. Vendored under third_party/libkrun (rev 9a8fedc, stable-1.19.x with PR #728)
# and locally patched so the passthrough fs device no longer needs libc's musl statx
# bindings (dropped after 0.2.183) — letting the whole tree build on a modern libc.
# See third_party/libkrun/VENDOR.md. default-features off drops the init-blob (we use
# disable_implicit_init); blk (krun_add_disk2) + net.
[dependencies.krun]
path = "../third_party/libkrun/src/libkrun"
package = "libkrun"
default-features = false
features = ["blk", "net"]
optional = true

[features]
default = ["virtiofsd", "libkrun", "embed"]
# Embed the guest kernel (vmlinux) and vk-agent into the `vk` binary so it runs
# self-contained (no --kernel/--agent, no files under /usr/local/lib/vk). build.rs
# reads VK_EMBED_KERNEL / VK_EMBED_AGENT at compile time; when unset (a plain dev
# `cargo build`) it embeds nothing and the runtime falls back to those flags. See
# src/embed.rs. build.sh sets the two vars for a real, shippable self-contained `vk`.
embed = []
# compile the bundled virtio-fs daemon into vk
virtiofsd = ["dep:virtiofsd", "dep:vhost", "dep:vhost-user-backend", "dep:vm-memory"]
# the libkrun VMM backend, driven by the `__libkrun-boot` subcommand. libkrun is
# reached via its C ABI; we always pass our own kernel (krun_set_kernel) so it
# never loads libkrunfw. Its rust-vmm deps (vm-memory 0.17, …) coexist with the
# bundled virtiofsd's (0.16) — independent subsystems, so no version unification.
# On by default: libkrun is the default backend (selection is env-driven, see
# vmm::libkrun_selected); VIRTKIT_VMM=cloud-hypervisor opts out, and jobs libkrun
# cannot serve (e.g. uid/gid-mapped shares) refuse with a pointer to that switch.
libkrun = ["dep:krun"]
